# dsp

./: .clang-format  .gitignore  .python-version  CMakeLists.txt  Makefile  README.md  check_coverage.sh  requirements.txt  setversion.sh
.github/workflows/: ci.yml  cmake-multi-platform.yml
csnd/: CMakeLists.txt  README.md  blep.c  blep.h  blsaw.c  bq.c  bq.h  curve.c  curve.h  ddelay.c  ddelay.h  distort.c  distort.h  entrypoint.c  env.c  env.h  follow.c  follow.h  lag.c  lag.h  line.c  line.h  maths.c  maths.h  oscil.c  oscil.h  phasor.c  phasor.h  rc.c  rc.h  samph.c  samph.h  sampler.c  sampler.h  smorph.c  svf.c  svf.h
include/dsp/: assert.h  balance.h  bq.h  chebpoly.h  constants.h  conv.h  conversions.h  curve.h  delay.h  dft.h  fasttrig.h  fifo.h  follow.h  ftable.h  ftrig.h  interpolate.h  lag.h  line.h  maths.h  matrix.h  nonlin.h  oscil.h  pblep.h  phasor.h  rc.h  resample.h  rmap.h  samph.h  shape.h  sinesum.h  stft.h  svf.h  tabread.h  utils.h  version.h.in  xfade.h
include/dsp/ftable/: chebpoly.h  deck.h  fill.h  ftable.h  normalize.h  ramp.h  sinesum.h  window.h
include/dsp/wavetable/: chebpoly.h  cheby.h  deck.h  fill.h  normalize.h  ramp.h  sinesum.h  wavetable.h  window.h
regr/: README.md  checksum.py  render.py  test.py
regr/checksums/: chebsaw.md5  curve-adsr.md5  curve2.md5  ddelay.md5  filters.md5  ladder.md5  mult.md5  oscil.md5  oscil3-pm.md5  pblep.md5  phasor.md5  smorph.md5  ssamph.md5
regr/csds/: ar-env.csd  blsaw.csd  curve-adsr.csd  curve2.csd  ddelay.csd  ladder.csd  line-adsr.csd  line-adsr2.csd  line.csd  mult.csd  oscil.csd  oscil3-pm.csd  pblep.csd  sampler.csd  ssamph.csd
rgr/: test.py
rgr/checksums/: ar-env.md5  blsaw.md5  follow.md5  lag.md5  line-adsr2.md5  line.md5  sampler.md5  saturate.md5  ssampi.md5
rgr/csds/: chebsaw.csd  ddelay.csd  filters.csd  follow.csd  lag.csd  saturate.csd  ssampi.csd
scripts/: _boiler.csd  check_saturators.py  munit_module_boiler.py  plottxt.py  plotwav.py  requirements.txt  test-adsr-env.csd  test-ar-env.csd  test-blsaw.csd  test-chebsaw.csnd  test-cheby3.csnd  test-curve.csd  test-curve2.csd  test-ddelay.csd  test-filters.csd  test-follow.csd  test-ladder.csd  test-lag.csd  test-line.csd  test-mult.csd  test-oscil.csd  test-oscil3-pm.csd  test-pblep.csd  test-phasor.csd  test-sampler.csd  test-saturate.csd  test-smorph.csd  test-ssamph.csd  test-ssampi.csd  transpose.py
scripts/poc/: check_bhaskara.py  check_chebpoly.py
src/: balance.c  bq.c  conv.c  curve.c  delay.c  follow.c  lag.c  line.c  oscil.c  pblep.c  phasor.c  rc.c  samph.c  stft.c  svf.c  tabread.c  xfade.c
src/ftable/: chebpoly.c  deck.c  fill.c  ftable.c  ramp.c  sinesum.c  window.c
src/wavetable/: chebpoly.c  cheby.c  deck.c  fill.c  ramp.c  sinesum.c  wavetable.c  window.c
tests/: CMakeLists.txt  config.h  helpers.h  main.c  test_balance.c  test_balance.h  test_bq.c  test_bq.h  test_conv.c  test_conv.h  test_conversions.c  test_conversions.h  test_curve.c  test_curve.h  test_deck.c  test_deck.h  test_delay.c  test_delay.h  test_follow.c  test_follow.h  test_ft_chebpoly.c  test_ft_chebpoly.h  test_ft_fill.c  test_ft_fill.h  test_ft_sinesum.c  test_ft_sinesum.h  test_ft_window.c  test_ft_window.h  test_ftable.c  test_ftable.h  test_interpolate.c  test_interpolate.h  test_lag.c  test_lag.h  test_line.c  test_line.h  test_maths.c  test_maths.h  test_oscil.c  test_oscil.h  (+20 more)
tests/regression/: .gitignore  checksum-all.sh  checksum.py  play-all.sh  render-all.sh  render.py  test.py
tests/regression/checksums/: ar-env.md5  blsaw.md5  chebsaw.md5  curve-adsr.md5  curve.md5  filters.md5  follow.md5  ladder.md5  lag.md5  line-adsr.md5  line-adsr2.md5  line.md5  mult.md5  oscil.md5  oscil3-pm.md5  pblep.md5  phasor.md5  sampler.md5  saturate.md5  smorph.md5
tests/regression/csds/: curve.csd  ddelay.csd  filters.csd  sampler.csd
tests/signals/: arp.csd  cheby.scd  gbuzz.csd  saw.csd  saw_ramps.csd
utils/: CMakeLists.txt  blsaw.c  blsawtab.c  chebytab.c  cli.c  cli.h  common.h  hello.c  sinesum.c  smorph.c  smorph2.c  wavio.c  wavio.h  wintab.c
